tests-snapshots/dbc-cantools/issue_199_extended.snap.stderr
error[E0412]: cannot find type `GearShifterGearShifter` in this scope
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:939:35
     |
 939 |     pub fn gear_shifter(&self) -> GearShifterGearShifter {
     |                                   ^^^^^^^^^^^^^^^^^^^^^^ help: an enum with a similar name exists: `GearShifterLeftBlinker`
...
1054 | pub enum GearShifterLeftBlinker {
     | ------------------------------- similarly named enum `GearShifterLeftBlinker` defined here

error[E0412]: cannot find type `CruiseButtonsCruiseButtons` in this scope
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1952:37
     |
1952 |     pub fn cruise_buttons(&self) -> CruiseButtonsCruiseButtons {
     |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`
...
2166 | pub enum CruiseButtons2LkaGapButton {
     | ----------------------------------- similarly named enum `CruiseButtons2LkaGapButton` defined here

error[E0433]: failed to resolve: use of undeclared type `GearShifterGearShifter`
   --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:942:18
    |
942 |             3 => GearShifterGearShifter::Park,
    |                  ^^^^^^^^^^^^^^^^^^^^^^
    |                  |
    |                  use of undeclared type `GearShifterGearShifter`
    |                  help: an enum with a similar name exists: `GearShifterLeftBlinker`

error[E0433]: failed to resolve: use of undeclared type `GearShifterGearShifter`
   --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:943:18
    |
943 |             0 => GearShifterGearShifter::DriveLow,
    |                  ^^^^^^^^^^^^^^^^^^^^^^
    |                  |
    |                  use of undeclared type `GearShifterGearShifter`
    |                  help: an enum with a similar name exists: `GearShifterLeftBlinker`

error[E0433]: failed to resolve: use of undeclared type `GearShifterGearShifter`
   --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:944:18
    |
944 |             _ => GearShifterGearShifter::_Other(self.gear_shifter_raw()),
    |                  ^^^^^^^^^^^^^^^^^^^^^^
    |                  |
    |                  use of undeclared type `GearShifterGearShifter`
    |                  help: an enum with a similar name exists: `GearShifterLeftBlinker`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1955:18
     |
1955 |             6 => CruiseButtonsCruiseButtons::Cancel,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1956:18
     |
1956 |             5 => CruiseButtonsCruiseButtons::Main,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1957:18
     |
1957 |             3 => CruiseButtonsCruiseButtons::Set,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1958:18
     |
1958 |             2 => CruiseButtonsCruiseButtons::Resume,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1959:18
     |
1959 |             1 => CruiseButtonsCruiseButtons::None,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1960:18
     |
1960 |             _ => CruiseButtonsCruiseButtons::_Other(self.cruise_buttons_raw()),
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:67:13
   |
63 |             Chime::MESSAGE_ID => Messages::Chime(Chime::try_from(payload)?),
   |             ----------------- matches all the relevant values
...
67 |             SteeringWheelAngle::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
   |
   = note: `-D unreachable-patterns` implied by `-D warnings`
   = help: to override `-D warnings` add `#[allow(unreachable_patterns)]`

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:70:13
   |
64 |             BlinkerStatus::MESSAGE_ID => {
   |             ------------------------- matches all the relevant values
...
70 |             GearShifter::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:76:13
   |
63 |             Chime::MESSAGE_ID => Messages::Chime(Chime::try_from(payload)?),
   |             ----------------- matches all the relevant values
...
76 |             BrakePedal::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:82:13
   |
63 |             Chime::MESSAGE_ID => Messages::Chime(Chime::try_from(payload)?),
   |             ----------------- matches all the relevant values
...
82 |             VehicleSpeed::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:85:13
   |
79 |             WheelSpeed::MESSAGE_ID => {
   |             ---------------------- matches all the relevant values
...
85 |             CruiseButtons::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
